--- a/src/less/partials/graph.less
+++ b/src/less/partials/graph.less
@@ -22,7 +22,7 @@
 
 #chartLabels, #chartWrapper {
   display: inline-block;
-  height: 750px;
+  height: 775px;
 }
 
 #chartLabels {
@@ -31,13 +31,13 @@
 
   .myLabel {
     background: #272727;
-    height: 55px;
+    height: 54px;
     width: 100%;
-    margin-top: 50px;
+    margin-top: 41px;
     display: block;
 
     text-align: left;
-    line-height: 55px;
+    line-height: 54px;
     padding: 0 15px;
 
     font-family: "HelveticaNeue-Bold";
@@ -61,6 +61,13 @@
     position: absolute;
     top: 50px;
     margin-left: -5px;
+    opacity: 0;
+
+    transition: 0.5s opacity;
+  }
+
+  canvas.current {
+    opacity: 1;
   }
 
   canvas.gone {
@@ -78,7 +85,7 @@
   font-size: 28px;
   font-family: "HelveticaNeue-Bold";
 
-  &.invisible {
+  &.invisible, &.pending {
     opacity: 0;
   }
 }
@@ -101,7 +108,7 @@
   opacity: 1;
   transition: opacity 0.5s;
 
-  &.invisible {
+  &.invisibleMain {
     opacity: 0;
   }
 }
